Remove invisible padding from search bar: - It prevented clicks on drinks at the top when scrolling back up.

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ table {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 3rem 0 6rem 3rem;
+  padding: 3rem 0 0 3rem;
   align-items: center;
   justify-content: flex-start;
   z-index: 1;
